--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,7 +1,7 @@
 ---
 import NavLink from './NavLink.astro'
 import ThemeToggle from './ThemeToggle.astro'
-import siteConfig from '../data/global.json'
+import siteConfig from '../data/global/global.json'
 
 const navLinks = siteConfig.navLinks || []
 ---
