--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -6,7 +6,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro'
 import Pagination from '../../components/Pagination.astro'
 import PostPreview from '../../components/PostPreview.astro'
 import Subscribe from '../../components/Subscribe.astro'
-import siteConfig from '../../data/global.json'
+import siteConfig from '../../data/global/global.json'
 import { sortItemsByDateDesc } from '../../utils/data-utils'
 
 // 生成博客文章列表的静态路径
