--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import siteConfig from '../data/global.json'
+import siteConfig from '../data/global/global.json'
 
 const socialLinks = siteConfig.socialLinks || []
 const navLinks = siteConfig.footerNavLinks || []
