--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import siteConfig from '../data/global.json'
+import siteConfig from '../data/global/global.json'
 ---
 
 <header class='w-full max-w-3xl mx-auto mb-12 sm:mb-16'>
