--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Button from '../components/Button.astro'
 import Hero from '../components/Hero.astro'
 import PostPreview from '../components/PostPreview.astro'
 import ProjectPreview from '../components/ProjectPreview.astro'
-import siteConfigData from '../data/global.json'
+import siteConfigData from '../data/global/global.json'
 import { sortItemsByDateDesc } from '../utils/data-utils'
 
 const siteConfig = siteConfigData
@@ -22,7 +22,7 @@ const featuredProjects = projects.filter(({ data }) => data.isFeatured)
   {
     featuredProjects?.length > 0 && (
       <div class='mb-16 sm:mb-24'>
-        <h2 class='mb-12 text-xl font-serif italic sm:mb-16 sm:text-2xl'>Projects</h2>
+        <h2 class='mb-12 text-primary text-xl font-serif italic sm:mb-16 sm:text-2xl'>Projects</h2>
         {featuredProjects.map(project => (
           <ProjectPreview project={project} class='mb-10 sm:mb-12' headingLevel='h3' />
         ))}
