--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -4,7 +4,7 @@ import { type CollectionEntry, getCollection } from 'astro:content'
 import BaseLayout from '../../layouts/BaseLayout.astro'
 import Pagination from '../../components/Pagination.astro'
 import ProjectPreview from '../../components/ProjectPreview.astro'
-import siteConfig from '../../data/global.json'
+import siteConfig from '../../data/global/global.json'
 import { sortItemsByDateDesc } from '../../utils/data-utils'
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
