--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -31,7 +31,7 @@ const blog = page.data
 <BaseLayout
   title='Blog'
   description='Embark on a journey of personal insights and experiences through my blog'
-  image={{ src: '/dante-preview.jpg', alt: 'The preview of the site' }}
+  image={{ src: '/src/images/dante-preview.jpg', alt: 'The preview of the site' }}
   showHeader={false}
 >
   <!-- 博客归档标题 -->
