add motion and add parallax effect to services component

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,6 +1,6 @@
 ---
 import interWoff2 from '@fontsource-variable/inter/files/inter-latin-wght-normal.woff2?url'
-import siteConfigData from '../data/global/global.json'
+import siteConfigData from '../data/global/index.json'
 import { getImage } from '../utils/image'
 import '../styles/global.css'
 
