--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -1,6 +1,6 @@
 ---
 import Button from './Button.astro'
-import siteConfig from '../data/global/global.json'
+import siteConfig from '../data/global/index.json'
 
 const subscribe = siteConfig.subscribe
 
