--- a/src/pages/tags/[id]/[...page].astro
+++ b/src/pages/tags/[id]/[...page].astro
@@ -5,7 +5,7 @@ import BaseLayout from '../../../layouts/BaseLayout.astro'
 import Pagination from '../../../components/Pagination.astro'
 import PostPreview from '../../../components/PostPreview.astro'
 import Subscribe from '../../../components/Subscribe.astro'
-import siteConfig from '../../../data/global/global.json'
+import siteConfig from '../../../data/global/index.json'
 import { sortItemsByDateDesc, getAllTags, getPostsByTag } from '../../../utils/data-utils'
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
