--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,18 +1,63 @@
 ---
-import siteConfig from '../data/global/global.json'
+import NavLink from './NavLink.astro'
+import ThemeToggle from './ThemeToggle.astro'
+import siteConfig from '../data/global/index.json'
+
+const navLinks = siteConfig.navLinks || []
 ---
 
-<header class='w-full max-w-3xl mx-auto mb-12 sm:mb-16'>
-  {
-    siteConfig.logo && siteConfig.logo?.src ? (
-      <a href='/'>
-        <img src={siteConfig.logo.src} alt={siteConfig.logo.alt || ''} class='max-h-12' />
-      </a>
-    ) : (
-      <a class='font-serif text-2xl leading-tight font-medium text-theme-foreground sm:text-4xl' href='/'>
-        {siteConfig.title}
-      </a>
-    )
-  }
-  {siteConfig.subtitle && <p class='text-sm leading-tight mt-1'>{siteConfig.subtitle}</p>}
+<header class='w-full border-b-2 border-b-black/5 mb-12 sm:mb-16 transition-all duration-300'>
+  <div class='container flex flex-row justify-between items-center py-4 md:py-6'>
+    {
+      siteConfig.title ? (
+        <a class='font-serif text-2xl leading-tight font-medium text-theme-foreground sm:text-4xl' href='/'>
+          {siteConfig.title}
+        </a>
+      ) : (
+        <a class='font-serif text-2xl leading-tight font-medium text-theme-foreground sm:text-4xl' href='/'>
+          {siteConfig.title}
+        </a>
+      )
+    }
+    <nav class=''>
+      {
+        navLinks.length > 0 && (
+          <div class='w-full container mx-auto relative'>
+            <button
+              class='menu-toggle w-8 h-8 -ml-1 flex items-center justify-center relative z-30 md:hidden'
+              aria-label='Open Menu'
+              aria-expanded='false'
+              aria-controls='menu-items'
+            >
+              <span class='menu-toggle-icon w-6 h-px relative bg-current' />
+            </button>
+            <ul id='menu-items' class='menu flex gap-6'>
+              {navLinks.map(link => (
+                <li class='py-1 px-2'>
+                  <NavLink class='text-gray-500 md:text-base font-medium hover:underline hover:underline-offset-2 hover:decoration-1' href={link.href}>
+                    {link.text}
+                  </NavLink>
+                </li>
+              ))}
+            </ul>
+          </div>
+        )
+      }
+    </nav>
+    <div class='w-12'>
+      <ThemeToggle />
+    </div>
+  </div>
 </header>
+
+<script>
+  const header = document.querySelector('header')
+
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 150) {
+      header?.classList.add('fixed', 'top-0', 'left-0', 'z-50', 'bg-gray-200', 'animate-slideDown')
+    } else {
+      header?.classList.remove('fixed', 'top-0', 'left-0', 'z-50', 'bg-gray-200', 'animate-slideDown')
+    }
+  })
+</script>
