--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 ---
 import Button from './Button.astro'
-import siteConfig from '../data/global/global.json'
+import siteConfig from '../data/global/index.json'
 
 const hero = siteConfig.hero
 ---
