--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,15 @@
 
 @import '@fontsource-variable/inter';
 @config "../../tailwind.config.ts";
+
+@theme {
+  --animate-slideDown: wiggle 0.5s ease-out;
+  @keyframes slideDown {
+    0% {
+      transform: translateY(-100%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+}
