--- a/src/components/blocks/Services.astro
+++ b/src/components/blocks/Services.astro
@@ -38,7 +38,7 @@ const [processedImage, ...processedServiceImages] = await processImages([image, 
                 <h3 class='text-xl font-semibold pb-4'>{item.title}</h3>
                 <p class='text-gray-600 max-w-72'>{item.description}</p>
                 <a href='#' class='text-blue-600 hover:text-blue-800 mt-4 inline-block'>
-                  了解更多 →
+                  Learn More →
                 </a>
               </div>
             </div>
