--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -23,7 +23,7 @@ const processImages = async (images: (string | undefined)[]) => {
 const [processedImage, ...processedServiceImages] = await processImages([image, ...items.map(item => item.serviceImage)])
 ---
 
-<section class='py-20 md:min-h-screen overflow-hidden' data-scroll-container>
+<section class='container mx-auto py-20 md:min-h-screen relative'>
   <div class='flex md:gap-32'>
     <div class='w-5/12 mb-12' data-inview='left' data-delay='0'>
       <h6 class='text-gray-600 mb-6'>{subTitle}</h6>
@@ -46,7 +46,7 @@ const [processedImage, ...processedServiceImages] = await processImages([image, 
         }
       </div>
     </div>
-    <div class='w-5/12 relative'>
+    <div class='w-5/12'>
       {processedImage && <Image src={processedImage} alt={title} width='600' height='900' class='w-full parallax' />}
     </div>
   </div>
@@ -56,7 +56,7 @@ const [processedImage, ...processedServiceImages] = await processImages([image, 
   import { animate, scroll } from 'motion'
 
   document.querySelectorAll('.parallax').forEach(item => {
-    scroll(animate(item, { y: [200, -200] }, { ease: 'linear' }), {
+    scroll(animate(item, { y: [300, -300] }, { ease: 'linear' }), {
       target: item,
       offset: ['start end', 'end start']
     })
