--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,6 +4,7 @@ import BaseHead, { type Props as HeadProps } from '../components/BaseHead.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import Scripts from '../components/localScripts.astro'
+import Loading from '../components/Loading.astro'
 
 export type Props = HeadProps
 const { ...head } = Astro.props
@@ -21,10 +22,9 @@ const { ...head } = Astro.props
     <ClientRouter />
   </head>
   <body class='bg-backdround font-sans'>
+    <Loading />
     <Header />
-    <main class='grow w-full container mx-auto'>
-      <slot />
-    </main>
+    <slot />
     <Footer />
     <Scripts />
   </body>
