--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,63 +1,34 @@
 ---
-import { getCollection } from 'astro:content'
 import BaseLayout from '../layouts/BaseLayout.astro'
-import Button from '../components/Button.astro'
-import Hero from '../components/blocks/Hero.astro'
-import Services from '../components/blocks/Services.astro'
-import PostPreview from '../components/PostPreview.astro'
-import ProjectPreview from '../components/ProjectPreview.astro'
+import Hero from '../components/sections/Hero.astro'
+import Marquee from '../components/sections/Marquee.astro'
+import Services from '../components/sections/Services.astro'
+import Testimonials from '../components/sections/Testimonials.astro'
+import Projects from '../components/sections/Projects.astro'
+import Posts from '../components/sections/Posts.astro'
+import CallToAction from '../components/sections/CallToAction.astro'
 import siteConfigData from '../data/global/index.json'
 import homeData from '../data/home/index.json'
-import { sortItemsByDateDesc } from '../utils/data-utils'
 
 const siteConfig = siteConfigData
 const { sections } = homeData
 
-const posts = (await getCollection('posts')).sort(sortItemsByDateDesc)
-const featuredPosts = posts.filter(({ data }) => data.isFeatured)
-
-const projects = (await getCollection('projects')).sort(sortItemsByDateDesc)
-const featuredProjects = projects.filter(({ data }) => data.isFeatured)
-
-// 组件映射对象
-const BLOCK_COMPONENTS = {
-  hero: Hero,
-  services: Services
+const SECTION_COMPONENTS = {
+  Hero,
+  Marquee,
+  Services,
+  Testimonials,
+  Projects,
+  Posts,
+  CallToAction
 } as const
 ---
 
 <BaseLayout description={siteConfig.description} image={siteConfig.image}>
   {
-    sections?.map(block => {
-      const Component = BLOCK_COMPONENTS[block._template as keyof typeof BLOCK_COMPONENTS]
-      return Component && <Component {...(block as any)} />
+    sections?.map(section => {
+      const Component = SECTION_COMPONENTS[section._template as keyof typeof SECTION_COMPONENTS]
+      return Component && <Component {...(section as any)} />
     })
-  }
-
-  {
-    featuredProjects?.length > 0 && (
-      <div class='mb-16 sm:mb-24'>
-        <h2 class='mb-12 text-primary text-xl font-serif italic sm:mb-16 sm:text-2xl'>Projects</h2>
-        {featuredProjects.map(project => (
-          <ProjectPreview project={project} class='mb-10 sm:mb-12' headingLevel='h3' />
-        ))}
-        <div class='mt-12 sm:mt-16'>
-          <Button href='/projects'>View All Projects</Button>
-        </div>
-      </div>
-    )
-  }
-  {
-    featuredPosts?.length > 0 && (
-      <div class='mb-16 sm:mb-24'>
-        <h2 class='mb-12 text-xl font-serif italic sm:mb-16 sm:text-2xl'>Writing</h2>
-        {featuredPosts.map(post => (
-          <PostPreview post={post} class='mb-10 sm:mb-12' headingLevel='h3' />
-        ))}
-        <div class='mt-12 sm:mt-16'>
-          <Button href='/posts'>View All Posts</Button>
-        </div>
-      </div>
-    )
   }
 </BaseLayout>
