--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 @import 'tailwindcss';
-
 @import '@fontsource-variable/inter';
+@config "../../tailwind.config.ts";
 
 @theme {
   --animate-slideDown: slideDown 0.5s ease-out;
@@ -12,6 +12,60 @@
       transform: translateY(0);
     }
   }
+  --animate-marquee: marquee 60s linear infinite;
+  @keyframes marquee {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
 }
 
-@config "../../tailwind.config.ts";
+/* 页面过渡效果 */
+body {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+body.loaded {
+  opacity: 1;
+}
+
+/* 确保内容在加载动画期间不可见 */
+body:not(.loaded) main {
+  visibility: hidden;
+}
+
+.embla__dot {
+  -webkit-tap-highlight-color: (rgba(49, 49, 49), 0.5);
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  touch-action: manipulation;
+  display: inline-flex;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+.embla__dot:after {
+  content: '';
+  background-color: #efefef;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+}
+.embla__dot--selected:after {
+  background-color: #caf34d;
+}
