--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -14,17 +14,17 @@ const processedImage = image ? await getImage(image) : null
 ---
 
 <section class='bg-white'>
-  <div class='container mx-auto grid grid-cols-4 gap-8 pt-12 md:pt-16 items-center'>
-    <div class='col-span-2 md:col-span-3'>
-      {headline && <h1 class='md:text-7xl md:leading-[1.3] font-bold mb-4' set:html={headline} />}
+  <div class='container mx-auto grid grid-cols-1 md:grid-cols-4 gap-8 pt-12 md:pt-16 px-4 md:px-0 items-center'>
+    <div class='col-span-1 md:col-span-3'>
+      {headline && <h1 class='text-5xl md:text-7xl md:leading-[1.3] font-bold mb-4 mt-12 md:mt-0' set:html={headline} />}
     </div>
-    <div class='col-span-2 md:col-span-1'>
+    <div class='col-span-1 md:col-span-1'>
       {subHeadline && <h3 class='md:text-md md:font-light mb-4 md:leading-[1.75]'>{subHeadline}</h3>}
     </div>
-    <div class='col-span-2 md:col-span-1'>
+    <div class='col-span-1 md:col-span-1'>
       <!-- 预留给其他内容的空间 -->
     </div>
-    <div class='col-span-2 md:col-span-3 [&_img]:block [&_img]:m-0'>
+    <div class='col-span-1 md:col-span-3 [&_img]:block [&_img]:m-0'>
       {processedImage && <Image src={processedImage} alt={headline ?? ''} width='960' height='400' class='w-full h-auto object-cover' />}
     </div>
   </div>
