--- a/src/components/sections/Posts.astro
+++ b/src/components/sections/Posts.astro
@@ -10,7 +10,7 @@ const featuredPosts = posts.filter(({ data }) => data.isFeatured)
 
 {
   featuredPosts?.length > 0 && (
-    <section class='my-16 sm:my-24'>
+    <section class='my-16 sm:my-24 px-4 md:px-0'>
       <div class='container mx-auto'>
         <h2 class='mb-12 text-xl sm:mb-16 sm:text-2xl'>{Astro.props.title}</h2>
         <div class='grid gap-8 sm:gap-12 sm:grid-cols-2 lg:grid-cols-3'>
