--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -10,7 +10,7 @@ const featuredProjects = projects.filter(({ data }) => data.isFeatured)
 
 {
   featuredProjects?.length > 0 && (
-    <section class='my-16 sm:my-24'>
+    <section class='my-16 sm:my-24 px-4 md:px-0'>
       <div class='container mx-auto'>
         <h2 class='mb-12 text-primary text-xl font-serif italic sm:mb-16 sm:text-2xl'>{Astro.props.title}</h2>
         {featuredProjects.map(project => (
