--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -24,7 +24,7 @@ const processImages = async (images: (string | undefined)[]) => {
 const [processedImage, ...processedServiceImages] = await processImages([image, ...customers.map(customer => customer.avatar)])
 ---
 
-<section class='bg-white mx-auto py-20 md:min-h-screen relative'>
+<section class='bg-white mx-auto py-20 relative'>
   <div class='container relative'>
     <h2 class='text-4xl font-bold mb-12'>{title}</h2>
     <div class='embla relative pb-12'>
@@ -32,20 +32,20 @@ const [processedImage, ...processedServiceImages] = await processImages([image, 
         <div class='embla__container flex'>
           {
             customers.map((customer, index) => (
-              <div class='embla__slide flex-[0_0_100%] min-w-0 flex pl-0'>
-                <div class='w-1/3 flex flex-col justify-center items-center border-r border-gray-200'>
+              <div class='embla__slide flex-[0_0_100%] min-w-0 flex flex-col md:flex-row pl-0'>
+                <div class='w-full md:w-1/3 flex flex-col justify-center items-center px-8 md:px-0 md:border-r md:border-gray-200'>
                   {processedServiceImages[index] && (
                     <Image src={processedServiceImages[index]} alt={customer.name} width={120} height={120} class='mx-auto rounded-full' />
                   )}
-                  <h3 class='text-2xl mt-6 mb-2'>{customer.name}</h3>
+                  <h3 class='text-xl md:text-2xl mt-6 mb-2'>{customer.name}</h3>
                   <h4 class='text-md font-light text-gray-500 tracking-widest'>{customer.job}</h4>
                   <div class='arrow-sub' />
                 </div>
-                <div class='w-2/3 py-16 pl-16'>
-                  <div class='mb-16 opacity-10'>
+                <div class='w-full md:w-2/3 p-8 md:py-16 md:pl-16 md:pr-0'>
+                  <div class='mb-8 md:mb-16 opacity-10'>
                     <Image src={quote} alt='quote' width={80} height={80} />
                   </div>
-                  <p class='text-3xl/12 font-light'>{customer.testimonial}</p>
+                  <p class='text-2xl md:text-3xl/12 font-light'>{customer.testimonial}</p>
                 </div>
               </div>
             ))
