fix container option behave strangely

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ const navLinks = siteConfig.navLinks || []
 <header class='w-full border-b-2 border-b-black/5 transition-all duration-300'>
   <div class='container p-4 md:px-0 md:py-6'>
     <div class='flex flex-row items-center justify-between w-full'>
-      <a class='mr-auto md:mr-0 font-serif text-2xl leading-tight font-medium text-theme-foreground sm:text-4xl' href='/'>
+      <a class='mr-auto md:mr-0 text-2xl leading-tight font-bold text-theme-foreground sm:text-4xl' href='/'>
         {siteConfig.title}
       </a>
 
