--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,12 +23,12 @@
   }
 }
 
-/* container option behave strangely */
+/* Container option behave strangely */
 html {
   position: relative;
 }
 
-/* 页面过渡效果 */
+/* Loading */
 body {
   opacity: 0;
   transition: opacity 0.5s ease;
@@ -38,11 +38,11 @@ body.loaded {
   opacity: 1;
 }
 
-/* 确保内容在加载动画期间不可见 */
 body:not(.loaded) main {
   visibility: hidden;
 }
 
+/* Embla Carousel */
 .embla__dot {
   -webkit-tap-highlight-color: (rgba(49, 49, 49), 0.5);
   -webkit-appearance: none;
